force-app/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Only</fullName>
            </value>
            <value>
                <fullName>High-Touch (CBA/Integration)</fullName>
            </value>
            <value>
                <fullName>Enterprise/Strategic</fullName>
            </value>
            <value>
                <fullName>Internal (eVisit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>