force-app/main/default/objects/Opportunity/fields/Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actively_Worked__c</fullName>
    <description>Checks if the record was modified or if an activity was assigned in the last 60 days.  Created by CK Ext 115</description>
    <formula>OR(
   (TODAY()- LastActivityDate) &lt; 60,
   (TODAY()- DATEVALUE(LastModifiedDate)) &lt; 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actively Worked</label>
    <type>Checkbox</type>
</CustomField>