force-app/main/default/objects/Opportunity/fields/AE_Owner__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Executive for this Opportunity. Created by CK Ext. 221</description>
    <label>AE Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>