force-app/main/default/objects/Opportunity/fields/AE_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner_Email__c</fullName>
    <label>AE Owner Email</label>
    <type>Email</type>
</CustomField>