force-app/main/default/objects/Opportunity/fields/All_Contract_Details_complete__c.field-meta.xml
<CustomField>
    <fullName>All_Contract_Details_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Contract Details complete</label>
    <type>Checkbox</type>
</CustomField>