force-app/main/default/objects/Opportunity/fields/Amount_in_company_currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_company_currency__c</fullName>
    <description>Amount in Company Currency. Created by CK Ext. 221</description>
    <label>Amount in company currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>