force-app/main/default/objects/Opportunity/fields/Annual_contract_value__c.field-meta.xml
<CustomField>
    <fullName>Annual_contract_value__c</fullName>
    <description>The annual contract value (ACV) of this deal. Created by CK Ext. 221</description>
    <label>Annual contract value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>