force-app/main/default/objects/Opportunity/fields/Annual_recurring_revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_recurring_revenue__c</fullName>
    <description>The annual recurring revenue (ARR) of this deal. Created by CK Ext. 221</description>
    <label>Annual recurring revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>