force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>ARR. Created by CK Ext. 221</description>
    <inlineHelpText>Put 0 (if you dont know) but update this number as we gather more info from the prospect.</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>