force-app/main/default/objects/Opportunity/fields/ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount__c</fullName>
    <description>Amount  x 1. Created by CK Ext. 221</description>
    <label>ARR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>