force-app/main/default/objects/Opportunity/fields/ARR_Implementation__c.field-meta.xml
<CustomField>
    <fullName>ARR_Implementation__c</fullName>
    <description>Implementing ARR. Created by CK Ext. 221</description>
    <inlineHelpText>ARR + Implementation Fee</inlineHelpText>
    <label>ARR + Implementation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>