force-app/main/default/objects/Opportunity/fields/Articulated_SOW__c.field-meta.xml
<CustomField>
    <fullName>Articulated_SOW__c</fullName>
    <label>Articulated SOW</label>
    <type>Url</type>
</CustomField>