force-app/main/default/objects/Opportunity/fields/Articulated_SOW_SLT_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Articulated_SOW_SLT_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articulated SOW SLT Signoff</label>
    <type>Checkbox</type>
</CustomField>