force-app/main/default/objects/Opportunity/fields/Became_Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Closed_Lost_Date__c</fullName>
    <label>Became Closed Lost Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>