force-app/main/default/objects/Opportunity/fields/Became_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Closed_Won_Date__c</fullName>
    <label>Became Closed Won Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>