force-app/main/default/objects/Opportunity/fields/Became_Negotiate_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Negotiate_Date__c</fullName>
    <label>Became Negotiate Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>