force-app/main/default/objects/Opportunity/fields/Became_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Proposal_Date__c</fullName>
    <label>Became Proposal Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>