force-app/main/default/objects/Opportunity/fields/Billing_Contact_identified__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Contact identified</label>
    <type>Checkbox</type>
</CustomField>