force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Bill_To_Tier__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Bill_To_Tier__c</fullName>
    <label>Bill To Tier (IO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
                <default>true</default>
                <label>End User</label>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>