force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Contract_Term__c</fullName>
    <label>Contract Term (IO)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>