force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__End_Date__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__End_Date__c</fullName>
    <label>End Date (IO)</label>
    <type>Date</type>
</CustomField>