force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__NetSuite_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NetSuite_Opportunity_Id__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Opportunity Id (IO)</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>