force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__NetSuite_Opportunity_Record_Url__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NetSuite_Opportunity_Record_Url__c</fullName>
    <label>NetSuite Opportunity Record (IO)</label>
    <type>Url</type>
</CustomField>