force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__NetSuite_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NetSuite_Order_Number__c</fullName>
    <label>NetSuite Order Number (IO)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>