force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Reseller__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller (IO)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.celigo_sfnsio__Channel_Tier__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
    <relationshipName>OpportunityReseller</relationshipName>
    <type>Lookup</type>
</CustomField>