force-app/main/default/objects/Opportunity/fields/celigo_sfnsio__Skip_Export_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Skip_Export_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Export To NetSuite (IO)</label>
    <type>Checkbox</type>
</CustomField>