force-app/main/default/objects/Opportunity/fields/Close_lost_to_competitor__c.field-meta.xml
<CustomField>
    <fullName>Close_lost_to_competitor__c</fullName>
    <description>Close lost to competitor reason. Created by CK Ext. 221</description>
    <label>Close lost to competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHR</fullName>
            </value>
            <value>
                <fullName>American Well</fullName>
            </value>
            <value>
                <fullName>MDLive</fullName>
            </value>
            <value>
                <fullName>Teladoc Health</fullName>
            </value>
            <value>
                <fullName>SnapMD</fullName>
            </value>
            <value>
                <fullName>Chiron Health</fullName>
            </value>
            <value>
                <fullName>GlobalMed</fullName>
            </value>
            <value>
                <fullName>Mend</fullName>
            </value>
            <value>
                <fullName>VSee</fullName>
            </value>
            <value>
                <fullName>Doxy.me</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>