force-app/main/default/objects/Opportunity/fields/Closed_Lost_ReasonTF__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_ReasonTF__c</fullName>
    <description>Closed Lost reason text field. Created by CK Ext. 221</description>
    <label>Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>