force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason__c</fullName>
    <description>Reason why this deal was Won. Created by CK Ext. 221</description>
    <label>Closed Won Reason</label>
    <type>TextArea</type>
</CustomField>