force-app/main/default/objects/Opportunity/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <description>Contract Renewal Date. Created by CK Ext. 221</description>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>