force-app/main/default/objects/Opportunity/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <label>CPI %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>