force-app/main/default/objects/Opportunity/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>HS Create Date</label>
    <type>DateTime</type>
</CustomField>