force-app/main/default/objects/Opportunity/fields/CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner__c</fullName>
    <description>CSM for this opportunity</description>
    <inlineHelpText>Customer Succes Manager</inlineHelpText>
    <label>CSM Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dani Solano</fullName>
            </value>
            <value>
                <fullName>Geoff Traub</fullName>
            </value>
            <value>
                <fullName>Jackie Thomas</fullName>
            </value>
            <value>
                <fullName>Jan Frey</fullName>
            </value>
            <value>
                <fullName>Josh Jackson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>