force-app/main/default/objects/Opportunity/fields/Current_Telehealth_Providers__c.field-meta.xml
<CustomField>
    <fullName>Current_Telehealth_Providers__c</fullName>
    <label>Current Telehealth Providers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teladoc</fullName>
            </value>
            <value>
                <fullName>Care.ai</fullName>
            </value>
            <value>
                <fullName>Caregility</fullName>
            </value>
            <value>
                <fullName>Andor Health</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AmWell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>