force-app/main/default/objects/Opportunity/fields/Custom_Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Demo_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Demo Completed</label>
    <type>Checkbox</type>
</CustomField>