force-app/main/default/objects/Opportunity/fields/Customer_Severity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Severity__c</fullName>
    <description>This field is used when Loss Reason = Product Feature missing. Built to support Product team feedback and used in Zapier to translate to clickup board</description>
    <inlineHelpText>Estimate the impact of not having the product feature (1 low, 5 high)</inlineHelpText>
    <label>Customer Severity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>