force-app/main/default/objects/Opportunity/fields/Desired_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Start_Date__c</fullName>
    <description>Desired Start Date. Created by CK Ext. 221</description>
    <label>Desired Start Date</label>
    <type>Date</type>
</CustomField>