force-app/main/default/objects/Opportunity/fields/eVisit_Noted_Differentiators__c.field-meta.xml
<CustomField>
    <fullName>eVisit_Noted_Differentiators__c</fullName>
    <label>eVisit Noted Differentiators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Implementation Speed</fullName>
            </value>
            <value>
                <fullName>ROI/Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>