force-app/main/default/objects/Opportunity/fields/Exec_Sponsor_Identified__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsor_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exec Sponsor Identified</label>
    <type>Checkbox</type>
</CustomField>