force-app/main/default/objects/Opportunity/fields/Forecast_amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_amount__c</fullName>
    <description>The custom forecasted deal value calculated by multiplying the forecast probability and deal amount. Created by CK Ext. 221</description>
    <label>Forecast amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>