force-app/main/default/objects/Opportunity/fields/Forecast_probability__c.field-meta.xml
<CustomField>
    <fullName>Forecast_probability__c</fullName>
    <description>The custom percent probability a deal will close. Created by CK Ext. 221</description>
    <label>Forecast probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>