force-app/main/default/objects/Opportunity/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <description>Forecast Status for this opportunity. Created by CK Ext. 221</description>
    <label>Forecast Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Loss Risk</fullName>
                <isActive>false</isActive>
                <label>Loss Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>