force-app/main/default/objects/Opportunity/fields/ICP_Tier_opp__c.field-meta.xml
<CustomField>
    <fullName>ICP_Tier_opp__c</fullName>
    <formula>TEXT( Account.ICP_Tier__c)</formula>
    <label>ICP Tier</label>
    <type>Text</type>
</CustomField>