force-app/main/default/objects/Opportunity/fields/Implementation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee__c</fullName>
    <description>Implementation Fee details. Created by CK Ext. 221</description>
    <label>Implementation Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>