force-app/main/default/objects/Opportunity/fields/Implementation_Start_Date_SLT_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date_SLT_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Start Date SLT Signoff</label>
    <type>Checkbox</type>
</CustomField>