force-app/main/default/objects/Opportunity/fields/Integration_Needs__c.field-meta.xml
<CustomField>
    <fullName>Integration_Needs__c</fullName>
    <label>Integration Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHR Scheduling</fullName>
            </value>
            <value>
                <fullName>EHR ADT Feed</fullName>
            </value>
            <value>
                <fullName>EHR Patient and Encounter Creation</fullName>
            </value>
            <value>
                <fullName>Real Time Insurance Eligibility</fullName>
            </value>
            <value>
                <fullName>Provider SSO</fullName>
            </value>
            <value>
                <fullName>Patient SSO</fullName>
            </value>
            <value>
                <fullName>APK - Mobile App Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>