force-app/main/default/objects/Opportunity/fields/Integrations_Diagram__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Diagram__c</fullName>
    <label>Integrations Diagram</label>
    <type>Url</type>
</CustomField>