force-app/main/default/objects/Opportunity/fields/Integrations_Diagram_SLT_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Diagram_SLT_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrations Diagram SLT Signoff</label>
    <type>Checkbox</type>
</CustomField>