force-app/main/default/objects/Opportunity/fields/Invoicing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Plan__c</fullName>
    <label>Invoicing Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>