force-app/main/default/objects/Opportunity/fields/IsCreatedByHubspot__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedByHubspot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify whether the field is created due to Hubspot Sync. Created by CK Ext.221.</description>
    <label>IsCreatedByHubspot</label>
    <type>Checkbox</type>
</CustomField>