force-app/main/default/objects/Opportunity/fields/IsCreatedBySystem__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedBySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if created by the system. Created by Ck Ext. 221.</description>
    <label>IsCreatedBySystem</label>
    <type>Checkbox</type>
</CustomField>