force-app/main/default/objects/Opportunity/fields/LeanData__Days_In_Stage__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Days_In_Stage__c</fullName>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>