force-app/main/default/objects/Opportunity/fields/LeanData__Reporting_Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Opportunity_Source__c</fullName>
    <label>Reporting Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Sourced</fullName>
            </value>
            <value>
                <fullName>Marketing Influenced</fullName>
            </value>
            <value>
                <fullName>Sales Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>