force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Partner Inquiry</fullName>
            </value>
            <value>
                <fullName>Sent to Reseller - MEP</fullName>
            </value>
            <value>
                <fullName>Product Feature Missing</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Need Provider Group</fullName>
            </value>
            <value>
                <fullName>Project Abandoned by Customer</fullName>
            </value>
            <value>
                <fullName>Competitor Strength</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Internal Decision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Company Size</fullName>
                <isActive>false</isActive>
                <label>Company Size</label>
            </value>
            <value>
                <fullName>Contract Changes</fullName>
                <isActive>false</isActive>
                <label>Contract Changes</label>
            </value>
            <value>
                <fullName>Disqualified Appointment</fullName>
                <isActive>false</isActive>
                <label>Disqualified Appointment</label>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
            <value>
                <fullName>Project cancelled</fullName>
                <isActive>false</isActive>
                <label>Project cancelled</label>
            </value>
            <value>
                <fullName>Reimbursement Issues</fullName>
                <isActive>false</isActive>
                <label>Reimbursement Issues</label>
            </value>
            <value>
                <fullName>Technology Constraints</fullName>
                <isActive>false</isActive>
                <label>Technology Constraints</label>
            </value>
            <value>
                <fullName>Timing 13+ months</fullName>
                <isActive>false</isActive>
                <label>Timing 13+ months</label>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
                <isActive>false</isActive>
                <label>Unresponsive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>