force-app/main/default/objects/Opportunity/fields/Market_Share_Competition__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Competition__c</fullName>
    <label>Market Share - Competition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>