force-app/main/default/objects/Opportunity/fields/MedStar_Material_Reference__c.field-meta.xml
<CustomField>
    <fullName>MedStar_Material_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MedStar Material Reference</label>
    <type>Checkbox</type>
</CustomField>